# fmla

./: README.md  package-lock.json  package.json  pyproject.toml  setup.cfg
.github/workflows/: ci.yml  publish.yml
fmla/: __init__.py  cli.py
fmla/__tests__/: test_cli.py  test_welcome.py
